[package]
name = "bearssl-sys"
description = "FFI bindings to BearSSL"
version = "0.0.5-pre.0"
authors = ["Aydin Mercan <aydin@mercan.dev>"]
license = "BSD-3-Clause"
readme = "README.md"
categories = ["cryptography", "no-std", "external-ffi-bindings"]
keywords = ["bearssl", "crypto", "tls", "ssl"]
edition = "2021"
rust-version = "1.64"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
libc = { version = "0.2.133", optional = true }

[build-dependencies]
bindgen = "0.60.1"
cc = { version =  "1.0.73", optional = true }

[features]
bundled = ["dep:cc"]
dont-assume-size_t-equals-uintptr_t = ["dep:libc"]
