[package]
name = "bearssl"
description = "BearSSL wrapper and engine development library"
version = "0.0.2-pre.0"
authors = ["Aydin Mercan <aydin@mercan.dev>"]
license = "BSD-3-Clause"
readme = "README.md"
categories = ["cryptography", "no-std", "api-bindings"]
keywords = ["bearssl", "crypto", "tls", "ssl"]
edition = "2021"
rust-version = "1.63"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bearssl-sys = { path = "../bearssl-sys" }
libc = "0.2.132"
rand_core = { version = "0.6.3", default-features = false }
zeroize = { version = "1.5.7", default-features = false, optional = true }

[features]
default = ["zeroize"]

std = ["rand_core/std", "zeroize?/std"]
bundled = ["bearssl-sys/bundled"]
dont-assume-size_t-equals-uintptr_t = ["bearssl-sys/dont-assume-size_t-equals-uintptr_t"]
zeroize = ["dep:zeroize"]
